load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["password_reader_mock.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/cmd/mock",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_mock//gomock:go_default_library"],
)
